# stablecoin-pay

./: .env.docker  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_create_wallets.sql  002_create_transactions.sql  003_create_webhook_events.sql  004_create_apy_rates.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/handlers/: apy.rs  deposits.rs  health.rs  mod.rs  wallets.rs  webhooks.rs
backend/src/db/: mod.rs
backend/src/domain/: apy_rate.rs  mod.rs  transaction.rs  wallet.rs  webhook_event.rs
backend/src/repository/: apy_rate_repo.rs  mod.rs  transaction_repo.rs  wallet_repo.rs  webhook_event_repo.rs
backend/src/services/: deposit.rs  mod.rs  solana.rs  sync.rs  webhook.rs
backend/src/services/apy/: defillama.rs  mod.rs  service.rs
frontend/: Dockerfile  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  transactions.tsx  yields.tsx
frontend/app/deposit/: [protocol].tsx
frontend/components/: APYTable.tsx  BalanceCard.tsx  ConnectWallet.tsx  DepositForm.tsx  TransactionItem.tsx  TransactionList.tsx
frontend/contexts/: WalletContext.tsx
frontend/data/: mockData.ts
frontend/hooks/: useApyRates.ts  useDeposit.ts  useUsdcBalance.ts  useWallet.ts
frontend/services/: api.ts  apy.ts  balance.ts  config.ts  deposit.ts
frontend/types/: index.ts
frontend/utils/: depositValidation.ts
(+1 files in other folders)
